--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,8 +1,8 @@
 <h1 class="title">TP1 - Mi primera app de Angular</h1>
-<p><b>Pablo Caparelli</b></p>
+<p class="nombre"><b>Pablo Caparelli Comisión 999201564</b></p>
 <hr />
 
-<p>
+<p class="motivo-estudio">
   "Quiero estudiar y aprender a utilizar Angular, para incorporar esta nueva herramienta a mis
   conocimientos y así poder insertarme en el futuro en el mundo de la tecnología."
 </p>
