--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<h1>Bienvenido a Home</h1>
+
+<!-- Contador -->
+<div class="contador">
+  <h2>Contador: {{ contador }}</h2>
+  <button (click)="incrementar()">+</button>
+  <button (click)="decrementar()">-</button>
+  <button (click)="reiniciar()">Reiniciar</button>
+</div>
+
+<!-- Aquí podrías incluir tus productos -->
+<!-- <app-productos></app-productos> -->
