creación de nuevo componente: información, agregado de ruta de navegación, estilos, descripción de la función de cada componente

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -17,10 +17,12 @@
         <li>
           <a routerLink="/productos" routerLinkActive="active">Productos</a>
         </li>
+        <li>
+          <a routerLink="/informacion" routerLinkActive="active">Información</a>
+        </li>
       </ul>
     </nav>
   </header>
 
-  <!-- Aquí se cargan las páginas -->
   <router-outlet></router-outlet>
 </main>
