--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,5 +1,5 @@
 <div class="home-container">
-  <h1 class="titulo1">Bienvenido a mi Home</h1>
+  <h1 class="titulo1">Práctica con interpolación</h1>
 
   <!-- Contador -->
   <div class="contador">
