--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -3,9 +3,9 @@
   width: 100%;
   height: 60vh;
   display: flex;
-  flex-direction: column; /* elementos en columna (vertical) */
-  align-items: center; /* centra horizontalmente */
-  justify-content: center; /* opcional: centra verticalmente todo */
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   overflow: hidden;
 }
 
@@ -26,7 +26,7 @@
 
 .contador {
   position: relative;
-  z-index: 2; /* para que quede sobre la imagen */
+  z-index: 2;
   border: 2px solid #ccc;
   padding: 1rem;
   width: 600px;
@@ -69,4 +69,58 @@
 .reiniciar {
   background-color: blueviolet;
   color: whitesmoke;
+}
+
+@media (max-width: 480px) {
+  .titulo1 {
+    font-size: 2.5rem;
+    margin-top: 20px;
+    text-align: center;
+  }
+
+  .contador {
+    width: 90%;
+    padding: 1rem;
+  }
+
+  .titulo2 {
+    font-size: 2rem;
+  }
+
+  .botones {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .contador button {
+    width: 100%;
+    padding: 12px;
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 768px) and (min-width: 481px) {
+  .titulo1 {
+    font-size: 4rem;
+    text-align: center;
+  }
+
+  .contador {
+    width: 80%;
+    padding: 1.5rem;
+  }
+
+  .titulo2 {
+    font-size: 2.5rem;
+  }
+
+  .botones {
+    gap: 15px;
+  }
+
+  .contador button {
+    width: 130px;
+    padding: 15px;
+    font-size: 1.7rem;
+  }
 }
